fix: map height on mobile
fixes #43

--- a/style.less
+++ b/style.less
@@ -182,6 +182,7 @@ a {
 #map {
 	width: 100%;
 	height: 50vh;
+	min-height: 500px;
 }
 
 .leaflet-popup-content-wrapper {
